add video to history page

--- a/content/about/history.adoc
+++ b/content/about/history.adoc
@@ -22,3 +22,6 @@ Rich
 [#download]
 .A History of Clojure
 image::/images/content/about/preview.png["Download paper", link="https://download.clojure.org/papers/clojure-hopl-iv-final.pdf", width=400]
+
+[#video]
+https://www.pldi21.org/prerecorded_hopl.11.html["A History of Clojure"] talk and Q&A from Rich Hickey at the HOPL IV Conference
