--- a/content/about/history.adoc
+++ b/content/about/history.adoc
@@ -23,5 +23,8 @@ Rich
 .A History of Clojure
 image::/images/content/about/preview.png["Download paper", link="https://download.clojure.org/papers/clojure-hopl-iv-final.pdf", width=400]
 
+From HOPL IV in June 2020:
+
 [#video]
-https://www.pldi21.org/prerecorded_hopl.11.html["A History of Clojure"] talk and Q&A from Rich Hickey at the HOPL IV Conference
+.HOPL IV conference talk and Q&A
+image::/images/content/about/hopl-video.png["Video", link="https://www.pldi21.org/prerecorded_hopl.11.html", width=400]
