--- a/content/news/2021/07/09/source-libs-builds.adoc
+++ b/content/news/2021/07/09/source-libs-builds.adoc
@@ -85,7 +85,7 @@ More information on the new https://clojure.org/reference/deps_and_cli#tool_inst
 
 == Installation
 
-A prerelease version of the CLI is now available: VERSION.
+A prerelease version of the CLI is now available: 1.10.3.899.
 
 On Mac or Linux, you can install the prerelease https://github.com/clojure/homebrew-tools#version-archive-tool-releases[using brew]. On Linux or Windows you can use the installer per the instructions in https://clojure.org/guides/getting_started[Getting Started] to install the specific version above.
 
