--- a/content/news/2021/07/09/source-libs-builds.adoc
+++ b/content/news/2021/07/09/source-libs-builds.adoc
@@ -5,10 +5,8 @@ Fogus
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-= Source Libs and Builds
-
-Several years ago, Clojure introduced https://clojure.org/reference/deps_and_cli#_deps_edn[deps.edn] (a data definition for dependencies), https://github.com/clojure/tools.deps.alpha/[tools.deps] (a library for computing classpaths), and the
-https://clojure.org/reference/deps_and_cli[Clojure CLI] to run programs. The Clojure community has widely adopted these and we are excited today to provide a clear path for users looking to use these same tools to build their projects:
+Several years ago, Clojure introduced <<xref/../../../../../reference/deps_and_cli#_deps_edn,deps.edn>> (a data definition for dependencies), https://github.com/clojure/tools.deps.alpha/[tools.deps] (a library for computing classpaths), and the
+<<xref/../../../../../reference/deps_and_cli#,Clojure CLI>> to run programs. The Clojure community has widely adopted these and we are excited today to provide a clear path for users looking to use these same tools to build their projects:
 
 * https://github.com/clojure/tools.build/[tools.build] - a library for building artifacts
 * CLI updates to make working with source repos as libs easier
@@ -32,13 +30,13 @@ The new https://github.com/clojure/tools.build[tools.build] library is a set of 
 For more details and full examples, see the following:
 
 * https://clojure.github.io/tools.build[tools.build API]
-* https://clojure.org/guides/tools_build#source-library-jar-build[tools.build guide]
+* <<xref/../../../../../guides/tools_build#_source_library_jar_build,tools.build guide>>
 
-Often, you may want to call multiple functions in your build program. The Clojure CLI has been extended to support the invocation of multiple functions in a row, and also to take a set of additional parameters as a https://clojure.org/reference/deps_and_cli#trailing-map-argument[trailing map] (similar to the https://clojure.org/news/2021/03/18/apis-serving-people-and-programs[functionality] added in Clojure 1.11 alphas). You can use this functionality to parameterize your build as needed - see the guide for an example.
+Often, you may want to call multiple functions in your build program. The Clojure CLI has been extended to support the invocation of multiple functions in a row, and also to take a set of additional parameters as a <<xref/../../../../../reference/deps_and_cli#_trailing_map_argument,trailing map>> (similar to the <<xref/../../../../../news/2021/03/18/apis-serving-people-and-programs#,functionality>> added in Clojure 1.11 alphas). You can use this functionality to parameterize your build as needed - see the guide for an example.
 
 == Source Repos as Libs
 
-Due to Clojure’s dynamic nature, we can directly use source repositories as libraries without the overhead of making, distributing, and consuming artifacts. This release provides some https://clojure.org/reference/deps_and_cli#using-git-libraries[updates for git libraries]:
+Due to Clojure’s dynamic nature, we can directly use source repositories as libraries without the overhead of making, distributing, and consuming artifacts. This release provides some <<xref/../../../../../reference/deps_and_cli#_git,updates for git libraries>>:
 
 * Git repository urls are now optional and inferred if the library name follows a naming convention
 * Git tag and short git sha prefix are now sufficient to identify a git lib version. The prefix is included to verify that the tag has not moved (both must point to the same commit).
@@ -57,14 +55,14 @@ The Clojure CLI library checks that the `:ensure` directory exists and if it’s
 clj -X:deps prep
 ```
 
-This command will find the unprepped libs, and run the `compile` function using the `:build` alias, presumably filling the `target/classes` directory with necessary classes to put on the classpath (`"target/classes"` should be in the project `:paths`). More information on supporting unprepped dependencies is available in the https://clojure.org/reference/deps_and_cli#preparing-source-dependency-libs[Clojure CLI reference].
+This command will find the unprepped libs, and run the `compile` function using the `:build` alias, presumably filling the `target/classes` directory with necessary classes to put on the classpath (`"target/classes"` should be in the project `:paths`). More information on supporting unprepped dependencies is available in the <<xref/../../../../../reference/deps_and_cli#prep,Clojure CLI reference>>.
 
 == Tools
 
 We have also enhanced the Clojure CLI to explore, install, invoke, and introspect tools based on a set of conventions for tool creators. Installing a new tool such as https://github.com/clojure/tools.deps.graph[tools.deps.graph] can be done as follows:
 
 ```shell
-clj -Ttools install io.github.clojure/tools.deps.graph  '{:git/tag "v1.0.63"}' :as graph
+clj -Ttools install io.github.clojure/tools.deps.graph '{:git/tag "v1.0.63"}' :as graph
 ```
 
 The use of a Git library name `io.github.clojure/tools.deps.graph` and the git tag `v1.0.63` allows the CLI to find and install the tool as `graph`, which is the name that used for invocation, a la `clj -Tgraph <function> <args>`. In this one case, a `:sha` is not required (but it will be resolved and recorded to check for a match in the future).
@@ -76,18 +74,18 @@ The CLI also provides a way to explore the available versions of tools with the 
 Finally, there are new `help/doc` and `help/dir` functions available in the `:deps` alias for introspecting what functions are available and how to use them. For example, you can run:
 
 ```shell
-clj -X:deps help/doc :ns clojure.tools.cli.help
+clj -X:deps help/doc :ns help
 ```
 
 To look at the documentation for the `clojure.tools.cli.help` namespace.
 
-More information on the new https://clojure.org/reference/deps_and_cli#tool_install[tools support in the CLI] is available in the reference docs.
+More information on the new <<xref/../../../../../reference/deps_and_cli#tool_install,tools support in the CLI>> is available in the reference docs.
 
 == Installation
 
 A prerelease version of the CLI is now available: 1.10.3.899.
 
-On Mac or Linux, you can install the prerelease https://github.com/clojure/homebrew-tools#version-archive-tool-releases[using brew]. On Linux or Windows you can use the installer per the instructions in https://clojure.org/guides/getting_started[Getting Started] to install the specific version above.
+On Mac or Linux, you can install the prerelease https://github.com/clojure/homebrew-tools#version-archive-tool-releases[using brew]. On Linux or Windows you can use the installer per the instructions in <<xref/../../../../../guides/getting_started#,Getting Started>> to install the specific version above.
 
 == What's New
 
@@ -95,25 +93,25 @@ All items below are additive updates, there should be no changes required for ex
 
 * https://github.com/clojure/tools.build[tools.build] - a new library for builds
 ** https://clojure.github.io/tools.build[API] - what's available
-** https://clojure.org/guides/tools_build[Guide] - how to use it
+** <<xref/../../../../../guides/tools_build#,Guide>> - how to use it
 * deps.edn:
-** https://clojure.org/reference/deps_and_cli#using-git-libraries[git deps]
+** <<xref/../../../../../reference/deps_and_cli#_git,git deps>>
 *** If a git library name follows the repo convention names, the `:git/url` can now be inferred (`:git/url` can also be specified explicitly and takes precedence)
 *** `:git/tag` and short `:git/sha` can now be specified instead of the full sha. Both must point to the same commit.
 *** `:sha` has been renamed to `:git/sha` but the original is still supported for backwards compatibility
-** A new `:deps/prep-lib` top-level key is used to say how a lib is prepared with the following keys: `:alias`, `:fn`, and `:ensures`. See https://clojure.org/reference/deps_and_cli#prep[prep] docs for more.
+** A new `:deps/prep-lib` top-level key is used to say how a lib is prepared with the following keys: `:alias`, `:fn`, and `:ensures`. See <<xref/../../../../../reference/deps_and_cli#prep,prep>> docs for more.
 ** A new `:tools/usage` top-level key is used to provide the `:ns-default` and `:ns-aliases` context for a tool
-* https://clojure.org/reference/deps_and_cli[Clojure CLI]
+* <<xref/../../../../../reference/deps_and_cli#,Clojure CLI>>
 ** New `-T` switch is like `-X` (invokes a function) but omits the project `:paths` and `:deps` and adds `:paths ["."]` to provide a clean tool classpath. `-T:aliases` is same as -X, `-Ttoolname` - resolves and uses tool context.
-** Execute https://clojure.org/reference/deps_and_cli#_executing_a_function[multiple functions] with `-X` or `-T`
-** New API https://clojure.org/reference/deps_and_cli#other-programs[help functions] available via the built-in `:deps` alias: `help/doc` and `help/dir`
+** Execute <<xref/../../../../../reference/deps_and_cli#_execute_a_function,multiple functions>> with `-X` or `-T`
+** New API <<xref/../../../../../reference/deps_and_cli#_other_programs,help functions>> available via the built-in `:deps` alias: `help/doc` and `help/dir`
 ** New API function `basis` that can be used to provide a custom basis to use, in combination with other tools that take a basis
-** New API program `prep` that is used to https://clojure.org/reference/deps_and_cli#prep[prep] source libs
+** New API program `prep` that is used to <<xref/../../../../../reference/deps_and_cli#prep,prep>> source libs
 * https://github.com/clojure/tools.deps.alpha[tools.deps.alpha]
 ** New library API: `create-basis` (also available in tools.build - use that one if writing a build program)
 * https://github.com/clojure/tools.tools[tools.tools] - a tool library for managing tools
 ** https://clojure.github.io/tools.tools[API]
-** https://clojure.org/reference/deps_and_cli#tool_install[Reference]
+** <<xref/../../../../../reference/deps_and_cli#tool_install,Reference>>
 ** tools.tools is auto-installed by the Clojure CLI as a tool named `tools` (invoke with `-Ttools`)
 
 You may also want to check out https://www.youtube.com/watch?v=BTAx-gFz6Ks[Alex Miller's talk] about this release at clojureD.
