--- a/content/dev/contrib_libs.adoc
+++ b/content/dev/contrib_libs.adoc
@@ -68,6 +68,7 @@ Status legend:
 | https://clojure.github.io/test.generative/[test.generative] | Test data generation and execution harness | Stuart Halloway | Inactive
 | https://clojure.github.io/tools.analyzer/[tools.analyzer] | Analyzer framework for Clojure code | Nicola Mometto | Active
 | https://clojure.github.io/tools.analyzer.jvm/[tools.analyzer.jvm] | JVM-specific passes for tools.analyzer | Nicola Mometto | Active
+| https://clojure.github.io/tools.build/[tools.build] | Functions for writing Clojure build programs | Alex Miller | Active
 | https://clojure.github.io/tools.cli/[tools.cli] | Command-line argument processor | Sean Corfield | Active
 | https://clojure.github.io/tools.deps.alpha/[tools.deps.alpha] | Tools for dependency management and classpath construction | Alex Miller | Active
 | https://clojure.github.io/tools.deps.graph/[tools.deps.graph] | Create dependency graphs for deps.edn projects | Alex Miller | Active
@@ -78,6 +79,7 @@ Status legend:
 | https://clojure.github.io/tools.namespace/[tools.namespace] | Tools for working with namespace declarations | Stuart Sierra | Stable
 | https://clojure.github.io/tools.nrepl/[tools.nrepl] | Network REPL | | Inactive
 | https://clojure.github.io/tools.reader/[tools.reader] | Clojure reader | Nicola Mometto | Active
+| https://clojure.github.io/tools.tools/[tools.tools] | A Clojure CLI tool for managing CLI tools | Alex Miller | Active
 | https://clojure.github.io/tools.trace/[tools.trace] | Execution tracing | Luc Prefontaine | Stable
 |===
 
