--- a/content/news/2021/07/23/deref.adoc
+++ b/content/news/2021/07/23/deref.adoc
@@ -13,11 +13,11 @@ I started the week by writing a http://blog.fogus.me/2021/07/20/clojure-builds-a
 
 ## Podcasts and videos
 
-* https://soundcloud.com/defn-771544745/74-will-acton-and-the-greatest-clojure-podcast-crossover[defn] - defn podcast with Will Acton under the microscope and Jordan Miller as guest host. Good fun!
+* https://soundcloud.com/defn-771544745/74-will-acton-and-the-greatest-clojure-podcast-crossover[defn] - defn podcast with Will Acton under the microscope and https://anchor.fm/lostinlambduhhs/episodes/lilactown-Will-Acton-X-DEFN-e14olt3[Jordan Miller] as guest host. Good fun!
 * https://clojurescriptpodcast.com/[ClojureScript Podcast] - Anatoly talking about mount
 * https://www.youtube.com/watch?v=b6LHzZogIbA&t=5s[Fred Overflow] - State and Concurrency in Clojure vs Java
 * https://www.youtube.com/watch?v=481UBX-5eY4[Los Angeles Clojure Users Group] - Learning Crux Datalog
-* https://www.youtube.com/watch?v=u5ECoR7KT1Y[London Clojurians] - Babashka tasks at London Clojurians
+* https://www.youtube.com/watch?v=u5ECoR7KT1Y[London Clojurians] - Babashka tasks
 
 ## Blogs, discussions, tutorials
 
@@ -29,7 +29,7 @@ I started the week by writing a http://blog.fogus.me/2021/07/20/clojure-builds-a
 Some interesting library and tool updates and posts this week:
 
 * https://twitter.com/bbatsov/status/1417072603458588674[Cider] 9 - Cider turned 9 years old! A fantastic tool from Bozhidar Batsov and his team of contributors. Thank you!
-* https://lambdaisland.com/blog/2021-06-29-lioss-update-june-2021[Lambda Island] - A aggregate of some of the great tools and libraries coming from Lambda Island in July.
+* https://lambdaisland.com/blog/2021-06-29-lioss-update-june-2021[Lambda Island] - An overview of some of the great tools and libraries coming from Lambda Island in July.
 * https://github.com/cognitect-labs/test-runner[test-runner] 0.4.0 - Cognitect-Labs test-runner gets a bump.
 * https://github.com/clojure/tools.build[tools.build] 0.1.6 - Building artifacts in Clojure
 
