--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,26 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.933 (July 28, 2021) [[v1.10.3.933]]
+
+* deps.edn
+** <<xref/../../reference/deps_and_cli#_git,git deps>>
+*** If a git library name follows the repo convention names, the `:git/url` can now be inferred (`:git/url` can also be specified explicitly and takes precedence)
+*** `:git/tag` and prefix `:git/sha` can now be specified instead of the full sha. Both must point to the same commit.
+*** `:sha` has been renamed to `:git/sha` but the original is still supported for backwards compatibility
+** `:deps/prep-lib` - a new top-level key can be used to say how a source lib should be prepared before being added to the classpath. This key's value is a map with `:alias`, `:fn`, and `:ensures`. See <<xref/../../reference/deps_and_cli#prep,prep docs>> for more info.
+** `:tools/usage` - a new top-level key can be used to provide the `:ns-default` and `:ns-aliases` context for a tool
+* <<xref/../../reference/deps_and_cli#tool_install,Tools>> - git-based programs that can be installed with a local name. Tools can provide their own usage context in deps.edn.
+** Added new auto-installed tool named `tools` with https://clojure.github.io/tools.tools[functions] `install`, `list`, `remove`. See <<xref/../../reference/deps_and_cli#tool_install#,reference>>.
+** Install a tool with `clojure -Ttools install <lib> <coord> :as <toolname>`
+** Run a tool with `clojure -T<toolname> fn` (also takes -X style args)
+* <<xref/../../reference/deps_and_cli#,Clojure CLI>>
+** New `-T` option is like `-X` (executes a function) but omits the project `:deps`, replaces project paths with `["."]`. `-T:aliases` is otherwise same as `-X`. `-Ttoolname` resolves named tool by name and uses that tool lib.
+** Added new built-in -X:deps <<xref/../../reference/tools#_other_programs,help functions>> `help/doc` and `help/dir`
+** Added new API program `prep` that can be used to <<xref/../../reference/deps_and_cli#prep,prep>> source libs
+
+Read more at <<xref/../../news/2021/07/09/source-libs-builds#,Source Libs and Builds>>.
+
 === 1.10.3.855 (May 25, 2021) [[v1.10.3.855]]
 
 * Fix in applying :jvm-opts with -X execution on Windows
