--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -42,7 +42,7 @@ Recent official releases are described here. Prereleases and older versions can 
 ** https://clojure.atlassian.net/browse/TDEPS-183[TDEPS-183] - Fix -Sdescribe output to be valid EDN on Windows
 ** https://clojure.atlassian.net/browse/TDEPS-179[TDEPS-179] - Fix incorrect classpath when :classpath-overrides removes path
 ** Delay computation of local-repo path (don't compute at load time)
-* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1003
+** Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1003
 * New -X:deps programs:
 ** https://clojure.github.io/tools.deps.alpha/clojure.tools.cli.api-api.html#clojure.tools.cli.api/find-versions[`find-versions`] - to find versions of Maven or git libs or tools
 ** https://clojure.github.io/tools.deps.alpha/clojure.tools.cli.api-api.html#clojure.tools.cli.api/prep[`prep`] - use to <<xref/../../reference/deps_and_cli#prep,prep>> source libs
